--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,95 @@
+html {
+  font-size: 100%;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.gamegrid {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.game {
+  margin: 0.25rem;
+  padding: 0.5rem;
+  width: 10rem;
+  background-color: #eee;
+  border: #bbb solid 0.05rem;
+  border-radius: 0.25rem;
+
+  display: flex;
+  flex-flow: column;
+}
+
+.game .title {
+  margin: 0.25rem;
+  font-size: 1rem;
+  font-weight: bolder;
+  word-wrap: unset;
+  flex-grow: 20;
+}
+
+.game .year {
+  margin-left: 0.5rem;
+  float: right;
+  text-align: right;
+  font-size: 0.75rem;
+  font-weight: 800;
+  color: #666;
+  text-decoration: underline; 
+}
+
+.game .thumbnail img {
+  width: 10rem;
+  height: 7rem;
+}
+
+.game .genre {
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  font-weight: bolder;
+  color: #333;  
+}
+
+.game .status {
+  margin-top: 0.5rem;
+  font-size: 1rem;
+  flex-grow: 1;
+  font-weight: bolder;
+  text-transform: uppercase;
+  font-size: 0.75rem;
+}
+
+.game button {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
+  color: #ffffff;
+  text-shadow: 0 0.1rem 0 #154682;
+  padding: 0.25rem 0.75rem;
+  background: linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
+  background-color: #007dc1;
+  border: 0.075rem solid #124d77;
+  border-radius: 0.25rem;
+  box-shadow: inset 0 0.05rem 0 0 #54a3f7;
+}
+.game button:hover {
+  background: linear-gradient(to bottom, #0061a7 5%, #007dc1 100%);
+  background-color: #0061a7;
+}
+.game button:active {
+  position: relative;
+  top: 0.1rem;
+}
+
+.game button:disabled {
+  background: linear-gradient(to bottom, #999 5%, #c1c1c1 100%);
+  background-color: #606060;
+  box-shadow: inset 0 0.05rem 0 0 #A5A5A5;
+  border-color: #999;
+  text-shadow: none;
+  color: #ddd;
 }
